==> panStamp/panstamp/arduino-1.6/arduino-1.6_patch/libraries/Adafruit_NFCShield_I2C-master/Adafruit_NFCShield_I2C.cpp <==
 #include "Arduino.h"
 #include "WProgram.h"
#include <Wire.h>
 #define WIRE Wire
 #define WIRE Wire1
#include <HardwareSerial.h>
#include "Adafruit_NFCShield_I2C.h"
 #define PN532DEBUG
#define PN532_PACKBUFFSIZ 64

void Adafruit_NFCShield_I2C::begin() {
  WIRE.begin();

  // Reset the PN532  
  digitalWrite(_reset, HIGH);
  digitalWrite(_reset, LOW);
  delay(400);
  digitalWrite(_reset, HIGH);
}

uint8_t Adafruit_NFCShield_I2C::wirereadstatus(void) {
  uint8_t x = digitalRead(_irq);
  
  if (x == 1)
    return PN532_I2C_BUSY;
  else
    return PN532_I2C_READY;
}
