==> savent404/AttendanceMachine/Drivers/MiddleDriver/Src/Adafruit_NFCShield_I2C.cpp <==
#include "Adafruit_NFCShield_I2C.h"
#define PN532_PACKBUFFSIZ 64

void Adafruit_NFCShield_I2C::begin()
{
    // WIRE.begin();
    // TODO: I2C begin
    // Reset the PN532
    // digitalWrite(_reset, HIGH);
    HAL_GPIO_WritePin(_reset.Port, _reset.Pin, GPIO_PIN_SET);
    // digitalWrite(_reset, LOW);
    HAL_GPIO_WritePin(_reset.Port, _reset.Pin, GPIO_PIN_RESET);
    delay(400);
    // digitalWrite(_reset, HIGH);
    HAL_GPIO_WritePin(_reset.Port, _reset.Pin, GPIO_PIN_SET);
}

uint8_t Adafruit_NFCShield_I2C::wirereadstatus(void)
{
    // uint8_t x = digitalRead(_irq);
    uint8_t x = HAL_GPIO_ReadPin(_irq.Port, _irq.Pin) == GPIO_PIN_SET ? 1 : 0;

    if (x == 1)
        return PN532_I2C_BUSY;
    else
        return PN532_I2C_READY;
}
